--- a/intro.tex
+++ b/intro.tex
@@ -105,4 +105,4 @@ To summarize, here are our main contributions:
     \item We propose a set of coverage requirements that characterize the dynamic behavior of concurrency primitives, enabling measurement of quality and progress of schedule-space exploration.
 \end{itemize}
 
-The rest of this paper is as follows: Section \ref{sec:bg} discusses the fundamentals about concurrency debugging in Go and ideas behind \goat. Section \ref{sec:design} illustreate the design and implementation of \goat's components. The evaluation of \goat on GoKer bug benchmark is illustrated in section \ref{sec:evaluation}. Section \ref{sec:related} discusses the related work and finally, section \ref{sec:summary} summarizes and concludes.
+The rest of this paper is as follows: Section \ref{sec:bg} discusses the fundamentals about concurrency debugging in Go and ideas behind \goat. Section \ref{sec:design} illustrate the design and implementation of \goat's components. The evaluation of \goat on GoKer bug benchmark is illustrated in section \ref{sec:evaluation}. Section \ref{sec:related} discusses the related work and finally, section \ref{sec:summary} summarizes and concludes.
