--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -51,7 +51,7 @@
 \begin{document}
 
 
-\title{\goat: Automated Concurrency Analysis and Debugging Tool for Go\\Paper Type: Tool / Benchmark}
+\title{\goat: Automated Concurrency Analysis and Debugging Tool for Go}
 
 
 %\author{\IEEEauthorblockN{Saeed Taheri}
@@ -118,5 +118,7 @@ golang, concurrency, testing coverage analysis
 \bibliographystyle{IEEEtran}
 \bibliography{bibs}
 
-
+\appendix
+\section{Artifact Appendix}
+\input{artifact}
 \end{document}
