--- a/bibs.bib
+++ b/bibs.bib
@@ -2619,3 +2619,20 @@ title={Supporting Material for IISWC submission},
 author={GOAT},
 url={https://anonymous.4open.science/r/iiswc_goat_visualizations},
 }
+
+
+
+@software{goat_artifact,
+  author       = {Saeed Taheri and
+                  Ganesh Gopalakrishnan},
+  title        = {{GoAT: Automated Concurrency Analysis and Debugging
+                   Tool for Go - Artifact Evaluation for IISWC 2021}},
+  month        = sep,
+  year         = 2021,
+  note         = {{GoAT will be updated on
+                   https://github.com/staheri/goat.git}},
+  publisher    = {Zenodo},
+  version      = {1.0},
+  doi          = {10.5281/zenodo.5519040},
+  url          = {https://doi.org/10.5281/zenodo.5519040}
+}
