--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -31,6 +31,7 @@
 \usepackage{amssymb}
 \usepackage{pdfrender}
 \usepackage{subcaption}
+\usepackage{hyperref}
 
 % If you use beamer only pass "xcolor=table" option, i.e. \documentclass[xcolor=table]{beamer}
 \usepackage[normalem]{ulem}
@@ -115,10 +116,14 @@ golang, concurrency, testing coverage analysis
 \input{summary.tex}
 
 
-\bibliographystyle{IEEEtran}
-\bibliography{bibs}
 
 \appendix
 \section{Artifact Appendix}
 \input{artifact}
+
+
+
+\bibliographystyle{IEEEtran}
+\bibliography{bibs}
+
 \end{document}
